--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ author: Petar Sabev
 description: UI Framework
 dependencies:
   intl: any
-  svgspriter:
-    git: /home/user/Work/repositories/transformer.git
+  barback: any
+  path: any
 transformers:
-- svgspriter
+- lib/transformer/svgspriter.dart
